# FocusTNT

./: .gitignore  CMakeLists.txt  GroundTruth.csv  README.md  install_FocusTNT.sh  run_FocusTNT.sh
Benchmarks/FSE/loop/Adding_Subtracting_Zero_3_T/: Adding_Subtracting_Zero_3_T.c
Benchmarks/FSE/loop/Adding_Subtracting_Zero_4_NT/: Adding_Subtracting_Zero_4_NT.c
Benchmarks/FSE/loop/Adding_Subtracting_Zero_5_NT/: TestCases.csv
Benchmarks/FSE/loop/Incorrect_Bit_Calculation_3_T/: TestCases.csv
Benchmarks/FSE/loop/Incorrect_Control_Statement_2_NT/: Incorrect_Control_Statement_2_NT.c
Benchmarks/FSE/loop/Incorrect_Initialization_2_NT/: Incorrect_Initialization_2_NT.c
Benchmarks/FSE/loop/Incorrect_Update_for_Loop_Iterator_1_T/: TestCases.csv
Benchmarks/FSE/loop/Missing_Iterator_Update_4_NT/: TestCases.csv
Benchmarks/FSE/loop/Missing_Iterator_Update_5_NT/: TestCases.csv
Benchmarks/FSE/loop/Signed_Overflow_Error_3_T/: Signed_Overflow_Error_3_T.c
Evaluation Results/: FSE - Evaluation Results.xlsx
include/concretizer/: action.h  consumer.h  variable_assignment.h  visitor_and_rewriter.h
include/file/: info.h
include/result_processor/: result_processor.h
include/slicer/: action.h  consumer.h  loop_descriptor.h  visitor_and_rewriter.h
src/: main.cpp
src/concretizer/: action.cpp  consumer.cpp  visitor_and_rewriter.cpp
src/file/: info.cpp
src/result_processor/: result_processor.cpp
src/slicer/: action.cpp  consumer.cpp  fix_framac_bugs.cpp  merge_sliced_programs.cpp  visitor_and_rewriter.cpp
tools/2LS/: Dockerfile  install_2LS.sh
tools/AProVE/: install_AProVE.sh
tools/CPAchecker/: install_CPAchecker.sh
tools/FramaC/: install_FramaC.sh
tools/PROTON/: Dockerfile  install_PROTON.sh  termination.prp
tools/UAutomizer/: Dockerfile  install_UAutomizer.sh
tools/XLNT/: install_xlnt.sh
(+48362 files in other folders)
